CHANGES
*******

0.19 (unreleased)
=================

* Added support for Python 3.6 and dropped support for Python 3.3


0.18.1 (2017-06-30)
===================

* Link generation was unstable when supplied with multiple URL parameters.
  Sort URL parameters so that link generation is stable. This is convenient
  in tests.

  This could potentially break tests which weren't stable in the past. Fixing
  the tests to use the alphabetical sort order should fix the issue.

* The poisoned host header protection is no longer case-sensitive.

* Underscores are now allowed in host headers. Though they are not valid in
  domain names, they are valid in host names and offer no attack surface.

0.18 (2017-03-17)
=================

* **New**: The `load`` API, which allows you to define how incoming JSON
  (through a POST, PUT or PATH request) will be converted to a Python object and
  how it will be validated. This feature lets you plug in external
  serialization and validation libraries, such as Marshmallow, Colander,
  Cerberus, Jsonschema or Voluptuous.

* **Removed**: ``morepath.body_model_predicate`` is removed from the
  Morepath API together with the ``morepath.App.load_json`` directive
  and the ``morepath.request.body_obj`` property.
  If you use the ``load_json`` directive, this functionality has been moved
  to a separate `more.body_model`_ package. Use this package instead by
  subclassing your App from `more.body_model.BodyModelApp`.

  .. _more.body_model: https://github.com/morepath/more.body_model

* Uploading huge files lead to excessive memory consumption as the whole body
  was consumed for no good reason. This is now fixed.

  See `#504`_

  .. _#504: https://github.com/morepath/morepath/issues/504

* Fixes link prefix not applying to mounted applications.

  See '#516'

  .. _#516: https://github.com/morepath/morepath/issues/516

0.17 (2016-12-23)
=================

* **Removed**: The class ``morepath.ViewRegistry`` is gone.
